# Deep_Convo_GPT

./: .gitignore  BrainModel.chpl  BrainModel.cpp  BrainModel.hs  BrainModel.nim  BrainModel.pl  BrainModel.v  BrainModelV2.apl  BrainModel_OMP.c  BrainModeltf.py  Brainmodel.R  Brainmodel.rs  BrainmodelTFv2.py  ParallelBrainModel.chpl  VAE.cpp  VAE.py  brain_info_store.txt  create_proof_of_workforce_repo.sh  mark_one.md  proof_of_workforce_repo.bundle  readme.md  surprising_facts.txt  tfvariational_autoencoder.py
Buddhism/: Eight_Fold_Path.cpp  Noble_Eight_path.cu
Buddhism/non_duality/: nonduality.md
C_PP/: ExtendGraph_algo.cpp  GPT_Plugin_Linkreader_output.txt  RangeSearch_Algo.cpp  readme.txt
FjioLuz/: project_outline.md
GPU_new_uses/GPU_RAID/: deepseekconvo.md
GRU/: gru.js  gru_tensorflowjs.js
HumanClassDesign/: readme.md
RELU/: Dec_23_update.txt  text_sentiment_classifier.py  txt_relu_step_by_step.txt
TensorBrainModel/: 1724708331267.conversation.json  tbm.md
WH40K/: khorn_spawn.md
arousal/: arousal_expanded.md
attention/GQA/: readme.md
attention/GQA/GQACE/: GPTvsDS.md  readme.md
attention/GQA/transformer/: transformer.md
calvin_cycle/: calvin_cycle.md
cellular_automata/: readme.txt
ceullular_automata/: customizable_index.cpp  energy_efficient_indexing.cpp  parallel_disk_indexing.cpp  random_oracle_trng.cpp
colossus/: readme.md
documentation/: INDEX.md  STRUCTURE_IMPROVEMENTS.md
documentation/conversations/GPT_AI_research/: research_papers.txt
documentation/notes/: Jensen_Shannon_Divergence_Explanation.txt
documentation/personal/: cv.md
documentation/references/inspire/: readme.md
documentation/uiua_install/: UIUA_WEBSITE_BUILD.md  readme.md
early_homonids/: phylo_tree.md
early_homonids/haskell/: Makefile  PhyloTree.hs  README.md  TUTORIAL.md  compile.sh  phylo-analysis.cabal
egregore/: readme.md
entry_level_it/: readme.md
erlang/: gru_example.erl
frege/: readme.md
graphs/: awsroute53outage.md  cloudflare.md  nover_mod0.md  nover_mod2.md  nover_og.md  nover_reverse_eng.md  nover_wasrstn.md  nover_waterfall.md  water_cheyb_reward_module.md
graphs/R-zero/: r-zero.md
hardware/: INDEX.md
hardware/gpu/GPU_new_uses/: GPT_GPU_thoughts.txt
hardware/networking/x540-T2_NIC/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  dpdk_whatisit.md  network_iperf_test.py  nic_diagv5.py  pyproject.toml  requirements.txt  setup.py  two_desktops.md
hardware/networking/x540-T2_NIC/.github/workflows/: ci.yml
hardware/networking/x540-T2_NIC/config/: default_config.yaml  example_config.yaml
hardware/networking/x540-T2_NIC/docs/: README.md
hardware/networking/x540-T2_NIC/docs/advanced/: asic_repurposing.md
hardware/networking/x540-T2_NIC/docs/dpdk/: memory_pools.md  memory_pools_diagram.md  vf_port_representors.md
hardware/networking/x540-T2_NIC/docs/guides/: quick_start.md
hardware/networking/x540-T2_NIC/examples/: basic_connectivity_test.py  throughput_benchmark.py
hardware/networking/x540-T2_NIC/examples/dpdk_examples/: README.md
hardware/networking/x540-T2_NIC/scripts/legacy/: nic_diagnosticv3.sh
hardware/networking/x540-T2_NIC/scripts/shell/: nic_diagnostic.sh  setup_dpdk.sh
hardware/networking/x540-T2_NIC/src/: __init__.py  config.py
hardware/networking/x540-T2_NIC/src/diagnostics/: __init__.py  iperf_test.py  nic_diagnostics.py
hardware/networking/x540-T2_NIC/src/utils/: __init__.py  interface_discovery.py  logging_config.py
hardware/networking/x540-T2_NIC/tests/: __init__.py  conftest.py  test_config.py  test_diagnostics.py  test_interface_discovery.py
hardware/voomrisc/: readme.md
human_brain/: readme.md
human_brain/tensorflow/: arduino.md  pulse_spike_train_speed_metrics_arduino_io.mmd  tfn2v3.py  tfp_spike_train_speed_metrics.py
implementations/: INDEX.md
implementations/brain-models/: BrainmodelCURLnull.txt
implementations/machine-learning/neural-networks/: Haskell_VariationalAutoencoder_NULL.hs  pytorch_autoencoder.py
jumping_spider/: ChemoThermoreceptors.cpp  JumpingSpiderBehavior.cpp  JumpingSpiderCognitiveSystem.cpp  Jumping_Spider_NS.cpp  Mechanoreceptors.cpp  SensoryReceptors  jumpingspider_organized.txt  processInformation.cpp
markov_chains/monte_carlo_treesearch/: readme.md
minksy/: readme.md
nanobots/: AI_augmented.md  BMA.md  EMA.md  NMA.md  QCP.md  TCM.md  bigbio_bind.md  biometric_bind.md  nanobots.md  readme.md
nanobots/Dec11/: Gemini1-2researchdoc.md
nanobots/NIR/: NIR_mind.md
nanobots/Nov16_2024/: readme.md
nanobots/inhibition/: ds_readme.md  four_adjacent_programs.c  nano_visualizer.py  phenom_tree_dos.c  readme.md  vapor_cell_magnet.c
nanobots/surveillance/: arduino.md  qwicc_lightening.md  readme.md
networking/nic_cards/: readme.md
polybius/: installscript.md
research/: INDEX.md
research/emerging-technologies/Proof_of_workforce/: readme.md
research/interdisciplinary/WH40K/: readme.md
research/nanobots/: BPM.md  NSI.md  TSE.md  TSE_v1.md  anti_tamper.md  learning_to_forget.md  readme.md
software_dev/: comms_scarce_resource.txt
software_ideas/: erlang_programs.txt
tenstorrent/kernel_talk/: activation_visualwritev2.py  activation_vizualwrite.py  analog_multiply.md  convonormoreadme.md  customtanh.py  matvex_engine.md  readme.md  recurkernerls.py  torch_nograd.py  what_else.md
theory/: INDEX.md
tools/: INDEX.md
vagrant_up/: readme.md
x540-T2_NIC/: IXGBEPFPMDVFportrepresentors.md  network_iperf_testv2.py  network_iperf_testv3.py  nic_diagv4.sh  readme.md
(+160 files in other folders)
