[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x540-t2-nic-tools"
version = "2.0.0"
description = "Comprehensive diagnostic and testing suite for Intel X540-T2 10GbE NIC"
readme = "README.md"
authors = [
    {name = "Deep_Convo_GPT Contributors"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Hardware",
    "Operating System :: POSIX :: Linux",
]
keywords = ["networking", "nic", "intel", "x540-t2", "10gbe", "dpdk", "diagnostics"]
requires-python = ">=3.10"
dependencies = [
    "psutil>=6.1.0",
    "tqdm>=4.67.1",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.2",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "mypy>=1.14.0",
    "isort>=5.13.2",
    "types-psutil>=6.1.0.20241230",
    "types-pyyaml>=6.0.12.20240917",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "myst-parser>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/danindiana/Deep_Convo_GPT"
Documentation = "https://github.com/danindiana/Deep_Convo_GPT/tree/main/hardware/networking/x540-T2_NIC"
Repository = "https://github.com/danindiana/Deep_Convo_GPT"
Issues = "https://github.com/danindiana/Deep_Convo_GPT/issues"

[project.scripts]
x540-diag = "src.diagnostics.nic_diagnostics:main"
x540-iperf = "src.diagnostics.iperf_test:main"

[tool.setuptools]
packages = ["src", "src.diagnostics", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
